# kelp

./: .gitignore  README.md  pyproject.toml
.github/actions/python-setup/: action.yml
.github/workflows/: python-setup.yml  run-tests.yml
.github/workflows/actions/: python-setup.yml
django_project/: manage.py
django_project/core/: urls.py
django_project/core/management/commands/: _utils.py  add_ratings.py
django_project/core/management/commands/_tests/: test_utils.py
django_project/core/migrations/: 0001_initial.py
django_project/core/models/: __init__.py
django_project/core/models/collection/: models.py
django_project/core/models/item/: models.py
django_project/core/models/metadata/: models.py
django_project/core/models/rating/: models.py  services.py  test_rating.py
django_project/kelp/: asgi.py  settings.py  urls.py  wsgi.py
test_data/: ratings.csv
