[tool.poetry]
name = "kelp"
version = "0.1.0"
description = "an easily-searchable database of seafood like that found in https://www.seafoodwatch.org/"
authors = ["Morgan Tenney <morgan.tenney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kelp.settings"
python_files = ["test_*.py"]
